Add VR teleoperation example node and update URDF file paths in documentation
- Implemented a new node for VR teleoperation using base_vr coordinate frame, allowing for incremental control of dual arms.
- Added subscriptions for VR controller inputs and publishers for arm command outputs.
- Included transformation logic to convert VR inputs to arm control commands.
- Updated documentation to reflect the correct file paths for URDF configurations.

--- a/qyh_jushen_ws/src/qyh_jaka_control/正逆解说明.md
+++ b/qyh_jushen_ws/src/qyh_jaka_control/正逆解说明.md
@@ -20,7 +20,7 @@
 本文档涉及**两套不同的URDF配置**，请务必注意区分：
 
 #### 1. 验证参考URDF (仅用于运动学验证)
-**文件路径**: `资料/双机械臂/Dual-Arms/Dual-Arms/Dual-Arms/urdf/Dual-Arms.urdf`
+**文件路径**: `资料/双机械臂/dual_arms/dual_arms/dual_arms/urdf/dual_arms.urdf`
 
 **用途**: 
 - 与Jaka官方控制器数据对比，验证单臂运动学模型的正确性
@@ -84,7 +84,7 @@
 
 ### 为什么使用不同的URDF？
 
-#### 验证URDF (Dual-Arms.urdf) 的作用:
+#### 验证URDF (dual_arms.urdf) 的作用:
 1. **单臂运动学验证**: 关节链的DH参数、关节限位、连杆长度等
 2. **姿态表示验证**: 确认Jaka使用XYZ Euler角
 3. **精度验证**: 证明URDF模型与官方控制器误差<1.3°
@@ -111,7 +111,7 @@
 #### 进行运动学计算时:
 ```python
 # 如果要验证Jaka SDK返回的关节角是否正确
-# 使用: Dual-Arms.urdf (与官方控制器对比)
+# 使用: dual_arms.urdf (与官方控制器对比)
 
 # 如果要规划实际机器人的运动
 # 使用: dual_arms.urdf.xacro (与硬件安装一致)
@@ -1041,7 +1041,7 @@ XZY      -93.854    43.464   -127.310 |  188.703   50.135   254.555 |  493.392°
 ## 文档版本信息
 - **创建日期**: 2025-12-11
 - **适用机器人**: Jaka Cobo 7-DOF 双臂系统
-- **验证URDF**: `资料/双机械臂/Dual-Arms/Dual-Arms/Dual-Arms/urdf/Dual-Arms.urdf`
+- **验证URDF**: `资料/双机械臂/dual_arms/dual_arms/dual_arms/urdf/dual_arms.urdf`
 - **实际URDF**: `qyh_jushen_ws/src/qyh_dual_arms_description/urdf/dual_arms.urdf.xacro`
 - **验证状态**: ✅ 已验证 (位置误差<7mm, 姿态误差<1.3°)
 - **重要提醒**: ⚠️ 验证URDF与实际URDF的安装位置和tool0坐标系不同，详见[URDF文件说明](#urdf文件说明)
